--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/server": "^4.7.1",
     "apollo-server-express": "^3.6.2",
+    "axios": "^1.5.1",
     "bcrypt": "^5.0.0",
     "express": "^4.17.2",
     "graphql": "^16.6.0",
@@ -24,4 +25,3 @@
     "nodemon": "^2.0.3"
   }
 }
-
