--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^8.2.0"
   },
   "dependencies": {
+    "@vitejs/plugin-react-swc": "^3.4.0",
     "apollo-server-express": "^3.12.1",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
