--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "heroku-prebuild": "echo This runs before Heroku installs dependencies.",
+    "heroku-postbuild": "echo This runs after Heroku installs dependencies, but before Heroku prunes and caches dependencies.",
+    "heroku-cleanup": "echo This runs after Heroku prunes and caches dependencies."
   },
   "keywords": [],
   "author": "",
@@ -20,6 +23,7 @@
     "apollo-server-express": "^3.12.1",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "node": "^18.14.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "vite": "^4.4.9"
