--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-react-swc": "^3.4.0",
     "apollo-server-express": "^3.12.1",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "node": "^18.14.0",
     "react-dom": "^18.2.0",
