--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^8.2.0"
+    "concurrently": "^8.2.0",
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "@vitejs/plugin-react-swc": "^3.4.0",
