--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.4",
     "@vitejs/plugin-react-swc": "^3.4.0",
     "apollo-server-express": "^3.12.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "mongo": "^0.1.0",
     "mongoose": "^7.5.4",
